feat: expose API version header
