# openapi.yaml
@@ -68,6 +68,11 @@ paths:
                   - token_type
                   - expires_in
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "400":
           description: Default Response
           content:
@@ -82,6 +87,11 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "401":
           description: Default Response
           content:
@@ -96,6 +106,11 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
   /users:
     get:
       summary: List users
@@ -132,6 +147,11 @@ paths:
                     - email
                     - name
                   additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "401":
           description: Default Response
           content:
@@ -146,6 +166,11 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
     post:
       summary: Create user
       tags:
@@ -198,6 +223,11 @@ paths:
                   - email
                   - name
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "400":
           description: Default Response
           content:
@@ -212,6 +242,11 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "401":
           description: Default Response
           content:
@@ -226,6 +261,11 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
   /users/{id}:
     get:
       summary: Get one user
@@ -266,6 +306,11 @@ paths:
                   - email
                   - name
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "401":
           description: Default Response
           content:
@@ -280,6 +325,11 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
         "404":
           description: Default Response
           content:
@@ -294,5 +344,10 @@ paths:
                 required:
                   - error
                 additionalProperties: false
+          headers:
+            x-api-version:
+              schema:
+                type: string
+                example: 1.0.0
 servers:
   - url: http://localhost:3000
